# quant-vault

./: .env.example  .gitignore  CLAUDE.md  ecosystem.config.js  pyproject.toml  quant-trading-agent-teams-guide.md  quant-trading-hybrid-deployment-guide.md  quant-vault.md  requirements.txt
.claude/team-prompts/: backtest.md  data.md  live.md
config/: risk.yaml  settings.py  symbols.yaml
data/: position_state.json  trade_history.json
docs/: phase21_multi_asset_spec.md
scripts/: collect_data.py  collect_derivatives.py  discord_bot.py  fetch_30m_data.py  live_trading.py  monitor.sh  phase7_portfolio_diversification.py  phase8_portfolio_optimization.py  review.py  run_backtest.py  run_backtest_5m.py  run_phase10.py  run_phase10_macd.py  run_phase10_regime.py  run_phase11.py  run_phase12.py  run_phase13.py  run_phase14.py  run_phase15.py  run_phase15b.py  run_phase16.py  run_phase17.py  run_phase18.py  run_phase19.py  run_phase19b.py  run_phase20.py  run_phase21.py  run_phase22.py  run_phase23.py  run_phase24.py  run_phase25.py  run_phase25b.py  run_phase26.py  run_phase27.py  run_phase28.py  run_phase29.py  run_phase3.py  run_phase30.py  run_phase31.py  run_phase32.py  (+22 more)
src/backtest/: engine.py  walk_forward.py
src/data/: __init__.py  collector.py  preprocessor.py  storage.py  stream.py
src/execution/: binance_executor.py  order_manager.py  position_manager.py  risk_manager.py  trading_engine.py
src/indicators/: __init__.py  basic.py  fibonacci.py  harmonic.py  ichimoku.py  patterns.py  volume_profile.py
src/ml/: features.py  models.py  (+1 more)
tests/: conftest.py
(+42 files in other folders)
